<resources>
    <string name="app_name">Capitão Cupom</string>
    <string name="img_logo">ImagemLogo</string>
    <string name="Email">Email</string>
    <string name="Senha">Senha</string>
    <string name="Logar">Logar</string>
    <string name="Login">Login</string>
    <string name="MsgRegistro">Registre-se, é gratis!</string>
    <string name="Nome">Nome</string>
    <string name="Sobrenome">Sobrenome</string>
    <string name="CPF">CPF</string>
    <string name="DatadeNascimento">Data de Nascimento</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="codigo">Código</string>
    <string name="perfil">Perfil</string>
    <string name="userFoto" />
    <string name="resgatar_b_nus">Resgatar Bônus</string>
    <string name="editarPerfil">Editar Perfil</string>
    <string name="Historico">Histórico</string>
    <string name="changeEmail">Mudar Email</string>
    <string name="mudar_email">Mudar Email</string>
    <string name="confime_o_email">Confime o Email</string>
    <string name="novo_email">Novo Email</string>
    <string name="mudar_senha">Mudar Senha</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="instrucoes">Instruções</string>
    <string name="escolha_sua_bandeira">Escolha sua bandeira</string>
    <string name="verifique_o_qr_code">Verifique o QR code</string>
    <string name="clique_em_anunciar">Clique em \'Anunciar\'</string>
    <string name="doIT">Aproveite seu cupom!!!!</string>
    <string name="title_activity_maps">Map</string>
</resources>
