<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="Alterar Informações"
        android:textColor="@color/azulescuro"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/novoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="20sp"
        android:textColor="@color/preto"
        android:ems="10"
        android:text="@string/Nome" />

    <TextView
        android:id="@+id/novoNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/Email"
        android:textColor="@color/preto"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <TextView
        android:id="@+id/emailChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="20sp"
        android:text="@string/DatadeNascimento"
        android:textColor="@color/azulescuro"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <TextView
        android:id="@+id/novaSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/Senha"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:textColor="@color/azulescuro"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />

</LinearLayout>